--- a/.env.template
+++ b/.env.template
@@ -18,7 +18,7 @@ MUSIC_PATH=./data/music
 DOWNLOADS_PATH=./data/downloads
 
 # External access (for Traefik or other reverse proxies)
-DOMAIN_SUFFIX=.local
+DOMAIN_SUFFIX=.lan
 JELLYFIN_DOMAIN=jellyfin${DOMAIN_SUFFIX}
 JELLYSEERR_DOMAIN=jellyseerr${DOMAIN_SUFFIX}
 FILEBROWSER_DOMAIN=filebrowser${DOMAIN_SUFFIX}
@@ -28,6 +28,8 @@ PROWLARR_DOMAIN=prowlarr${DOMAIN_SUFFIX}
 BAZARR_DOMAIN=bazarr${DOMAIN_SUFFIX}
 QBITTORRENT_DOMAIN=qbittorrent${DOMAIN_SUFFIX}
 SERVER_IP=192.168.86.1
+PUBLIC_JELLYFIN_DOMAIN=jellyfin.example.com
+PUBLIC_JELLYSEERR_DOMAIN=jellyseerr.example.com
 
 # Cloudflare Tunnel Configuration
 # Get this token from your Cloudflare Zero Trust dashboard
