--- a/web-ui/.env.example
+++ b/web-ui/.env.example
@@ -18,7 +18,7 @@ MUSIC_PATH=/mnt/external/music
 DOWNLOADS_PATH=/mnt/external/downloads
 
 # External access (for Traefik or other reverse proxies)
-DOMAIN_SUFFIX=.local
+DOMAIN_SUFFIX=.lan
 PUBLIC_DASHBOARD_DOMAIN=otterammo.xyz
 
 # Service domains
