--- a/dozzle/docker-compose.yml
+++ b/dozzle/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     networks:
       - ${NETWORK_NAME:-media-network}  # Keep for backward compatibility (Iteration 1)
       - mgmt-net                        # Management layer
-    # Removed: ports - Access via Traefik at http://dozzle.local
+    # Removed: ports - Access via Traefik at http://dozzle.lan
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
     environment:
@@ -16,7 +16,7 @@ services:
       - DOZZLE_NO_ANALYTICS=true
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.dozzle.rule=Host(`dozzle${DOMAIN_SUFFIX:-.local}`)"
+      - "traefik.http.routers.dozzle.rule=Host(`dozzle${DOMAIN_SUFFIX:-.lan}`)"
       - "traefik.http.routers.dozzle.entrypoints=web"
       - "traefik.http.services.dozzle.loadbalancer.server.port=8080"
     healthcheck:
