--- a/jellyseerr/docker-compose.yml
+++ b/jellyseerr/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     image: fallenbagel/jellyseerr:latest
     container_name: jellyseerr
     restart: unless-stopped
-    # Removed: ports - Access via Traefik at http://jellyseerr.local or https://jellyseerr.otterammo.xyz
+    # Removed: ports - Access via Traefik at http://jellyseerr.lan or https://jellyseerr.otterammo.xyz
     volumes:
       - ./config:/app/config
     environment:
@@ -30,6 +30,6 @@ services:
       start_period: 40s
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.jellyseerr.rule=Host(`${JELLYSEERR_DOMAIN:-jellyseerr.local}`)"
+      - "traefik.http.routers.jellyseerr.rule=Host(`${JELLYSEERR_DOMAIN:-jellyseerr.lan}`) || Host(`jellyseerr.local`) || Host(`${PUBLIC_JELLYSEERR_DOMAIN:-jellyseerr.otterammo.xyz}`)"
       - "traefik.http.routers.jellyseerr.entrypoints=web"
       - "traefik.http.services.jellyseerr.loadbalancer.server.port=5055"
