--- a/web-ui/docker-compose.yml
+++ b/web-ui/docker-compose.yml
@@ -3,13 +3,13 @@ services:
     build: .
     container_name: media-web-ui
     restart: unless-stopped
-    # Removed: ports - Access via Traefik at http://dashboard.local or https://otterammo.xyz
+    # Removed: ports - Access via Traefik at http://dashboard.lan or https://otterammo.xyz
     networks:
       - media-network      # Keep for backward compatibility (Iteration 1)
       - frontend-net      # User-facing dashboard
     environment:
       - TZ=${TZ:-UTC}
-      - DOMAIN_SUFFIX=${DOMAIN_SUFFIX:-.local}
+      - DOMAIN_SUFFIX=${DOMAIN_SUFFIX:-.lan}
       - PUBLIC_DASHBOARD_DOMAIN=${PUBLIC_DASHBOARD_DOMAIN:-otterammo.xyz}
       - SERVER_IP=${SERVER_IP:-192.168.86.111}
       - ADMIN_PASSWORD=${ADMIN_PASSWORD:-admin}
@@ -23,7 +23,7 @@ services:
       - "traefik.http.routers.web-ui-public.service=web-ui"
       
       # Admin site routing (local domain)
-      - "traefik.http.routers.web-ui-admin.rule=Host(`dashboard${DOMAIN_SUFFIX:-.local}`)"
+      - "traefik.http.routers.web-ui-admin.rule=Host(`dashboard${DOMAIN_SUFFIX:-.lan}`)"
       - "traefik.http.routers.web-ui-admin.entrypoints=web"
       - "traefik.http.routers.web-ui-admin.service=web-ui"
       
