--- a/jellyfin/docker-compose.yml
+++ b/jellyfin/docker-compose.yml
@@ -33,19 +33,6 @@ services:
       start_period: 40s
     labels:
       - "traefik.enable=true"
-      # HTTPS router for local .lan access
-      - "traefik.http.routers.jellyfin.rule=Host(`${JELLYFIN_DOMAIN:-jellyfin.lan}`) || Host(`jellyfin.local`)"
-      - "traefik.http.routers.jellyfin.entrypoints=websecure"
-      - "traefik.http.routers.jellyfin.tls=true"
-      - "traefik.http.routers.jellyfin.service=jellyfin"
-      # HTTP router for Cloudflare tunnel (public domain)
-      - "traefik.http.routers.jellyfin-public.rule=Host(`${PUBLIC_JELLYFIN_DOMAIN:-jellyfin.otterammo.xyz}`)"
-      - "traefik.http.routers.jellyfin-public.entrypoints=web"
-      - "traefik.http.routers.jellyfin-public.service=jellyfin"
-      # HTTP redirect for local domain only
-      - "traefik.http.routers.jellyfin-http.rule=Host(`${JELLYFIN_DOMAIN:-jellyfin.lan}`) || Host(`jellyfin.local`)"
-      - "traefik.http.routers.jellyfin-http.entrypoints=web"
-      - "traefik.http.routers.jellyfin-http.middlewares=redirect-to-https"
-      - "traefik.http.routers.jellyfin-http.service=jellyfin"
-      # Service definition
+      - "traefik.http.routers.jellyfin.rule=Host(`${JELLYFIN_DOMAIN:-jellyfin.lan}`) || Host(`jellyfin.local`) || Host(`${PUBLIC_JELLYFIN_DOMAIN:-jellyfin.otterammo.xyz}`)"
+      - "traefik.http.routers.jellyfin.entrypoints=web"
       - "traefik.http.services.jellyfin.loadbalancer.server.port=8096"
