--- a/jellyfin/docker-compose.yml
+++ b/jellyfin/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     image: jellyfin/jellyfin:latest
     container_name: jellyfin
     restart: unless-stopped
-    # Removed: ports - Access via Traefik at http://jellyfin.lan or https://jellyfin.otterammo.xyz
+    # Removed: ports - Access via Traefik at https://${TAILSCALE_HOST}:8096
     # Note: DLNA (1900/udp) and auto-discovery (7359/udp) disabled - configure clients manually
     volumes:
       - ./config:/config
@@ -15,7 +15,7 @@ services:
       - PUID=${PUID:-1000}
       - PGID=${PGID:-1000}
       - TZ=${TZ:-UTC}
-      - JELLYFIN_PublishedServerUrl=http://${JELLYFIN_DOMAIN:-jellyfin.lan}
+      - JELLYFIN_PublishedServerUrl=https://${TAILSCALE_HOST}:8096
     deploy:
       resources:
         limits:
@@ -33,6 +33,10 @@ services:
       start_period: 40s
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.jellyfin.rule=Host(`${JELLYFIN_DOMAIN:-jellyfin.lan}`) || Host(`jellyfin.local`) || Host(`${PUBLIC_JELLYFIN_DOMAIN:-jellyfin.otterammo.xyz}`)"
-      - "traefik.http.routers.jellyfin.entrypoints=web"
+      - "traefik.http.routers.jellyfin-public.rule=Host(`${PUBLIC_JELLYFIN_DOMAIN:-jellyfin.otterammo.xyz}`) || Host(`${JELLYFIN_DOMAIN:-jellyfin.lan}`)"
+      - "traefik.http.routers.jellyfin-public.entrypoints=web"
+      - "traefik.http.routers.jellyfin-public.service=jellyfin"
+      - "traefik.http.routers.jellyfin.rule=Host(`${TAILSCALE_HOST}`)"
+      - "traefik.http.routers.jellyfin.entrypoints=jellyfin"
+      - "traefik.http.routers.jellyfin.tls=true"
       - "traefik.http.services.jellyfin.loadbalancer.server.port=8096"
