--- a/jellyseerr/docker-compose.yml
+++ b/jellyseerr/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     image: fallenbagel/jellyseerr:latest
     container_name: jellyseerr
     restart: unless-stopped
-    # Removed: ports - Access via Traefik at http://jellyseerr.lan or https://jellyseerr.otterammo.xyz
+    # Removed: ports - Access via Traefik at https://${TAILSCALE_HOST}:5055
     volumes:
       - ./config:/app/config
     environment:
@@ -30,6 +30,10 @@ services:
       start_period: 40s
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.jellyseerr.rule=Host(`${JELLYSEERR_DOMAIN:-jellyseerr.lan}`) || Host(`jellyseerr.local`) || Host(`${PUBLIC_JELLYSEERR_DOMAIN:-jellyseerr.otterammo.xyz}`)"
-      - "traefik.http.routers.jellyseerr.entrypoints=web"
+      - "traefik.http.routers.jellyseerr-public.rule=Host(`${PUBLIC_JELLYSEERR_DOMAIN:-jellyseerr.otterammo.xyz}`) || Host(`${JELLYSEERR_DOMAIN:-jellyseerr.lan}`)"
+      - "traefik.http.routers.jellyseerr-public.entrypoints=web"
+      - "traefik.http.routers.jellyseerr-public.service=jellyseerr"
+      - "traefik.http.routers.jellyseerr.rule=Host(`${TAILSCALE_HOST}`)"
+      - "traefik.http.routers.jellyseerr.entrypoints=jellyseerr"
+      - "traefik.http.routers.jellyseerr.tls=true"
       - "traefik.http.services.jellyseerr.loadbalancer.server.port=5055"
