--- a/traefik/docker-compose.yml
+++ b/traefik/docker-compose.yml
@@ -9,15 +9,34 @@ services:
       - "--providers.docker.exposedbydefault=false"
       - "--providers.docker.network=${NETWORK_NAME:-media-network}"
       
+      # File provider for TLS config
+      - "--providers.file.directory=/config"
+      - "--providers.file.watch=true"
+
       # Entry points
       - "--entrypoints.web.address=:80"
-      
+      - "--entrypoints.jellyfin.address=:8096"
+      - "--entrypoints.jellyseerr.address=:5055"
+      - "--entrypoints.sonarr.address=:8989"
+      - "--entrypoints.radarr.address=:7878"
+      - "--entrypoints.prowlarr.address=:9696"
+      - "--entrypoints.bazarr.address=:6767"
+      - "--entrypoints.qbittorrent.address=:8080"
+      - "--entrypoints.grafana.address=:3000"
+      - "--entrypoints.prometheus.address=:9090"
+      - "--entrypoints.alertmanager.address=:9093"
+      - "--entrypoints.web-ui.address=:3001"
+      - "--entrypoints.cadvisor.address=:8081"
+      - "--entrypoints.dozzle.address=:8082"
+      - "--entrypoints.traefik.address=:8085"
+
       # API and dashboard
       - "--api.dashboard=true"
-      - "--api.insecure=true"
+      - "--api.insecure=false"
       
       # Health check endpoint
       - "--ping=true"
+      - "--ping.entrypoint=web"
       
       # Logs
       - "--log.level=INFO"
@@ -26,11 +45,24 @@ services:
       - "--accesslog.bufferingsize=100"
     ports:
       - "80:80"       # HTTP entry point
-      - "443:443"     # HTTPS entry point (prepared for Iteration 3)
-      # Removed: 8090:8080 - Dashboard now accessed via Traefik routing
+      - "8096:8096"   # Jellyfin
+      - "5055:5055"   # Jellyseerr
+      - "8989:8989"   # Sonarr
+      - "7878:7878"   # Radarr
+      - "9696:9696"   # Prowlarr
+      - "6767:6767"   # Bazarr
+      - "8080:8080"   # qBittorrent
+      - "3000:3000"   # Grafana
+      - "9090:9090"   # Prometheus
+      - "9093:9093"   # Alertmanager
+      - "3001:3001"   # Web UI
+      - "8081:8081"   # cAdvisor
+      - "8082:8082"   # Dozzle
+      - "8085:8085"   # Traefik Dashboard
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - ./logs:/var/log/traefik
+      - ./config:/config
     environment:
       - TZ=${TZ:-UTC}
       - DOCKER_API_VERSION=1.44
@@ -41,13 +73,14 @@ services:
       - backend-net       # Route to backend services (for monitoring)
       - security-net      # Connect to security services
     healthcheck:
-      test: ["CMD", "traefik", "healthcheck", "--ping"]
+      test: ["CMD", "traefik", "healthcheck", "--ping", "--ping.entrypoint=web", "--entrypoints.web.address=:80"]
       interval: 30s
       timeout: 10s
       retries: 3
       start_period: 10s
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.traefik-dashboard.rule=Host(`traefik${DOMAIN_SUFFIX:-.lan}`)"
-      - "traefik.http.routers.traefik-dashboard.entrypoints=web"
+      - "traefik.http.routers.traefik-dashboard.rule=Host(`${TAILSCALE_HOST}`)"
+      - "traefik.http.routers.traefik-dashboard.entrypoints=traefik"
+      - "traefik.http.routers.traefik-dashboard.tls=true"
       - "traefik.http.routers.traefik-dashboard.service=api@internal"
