--- a/cloudflared/docker-compose.yml
+++ b/cloudflared/docker-compose.yml
@@ -3,11 +3,15 @@ services:
     image: cloudflare/cloudflared:latest
     container_name: cloudflared
     restart: unless-stopped
+    user: root  # Required to read Docker secrets
     environment:
       - PUID=${PUID:-1000}
       - PGID=${PGID:-1000}
       - TZ=${TZ:-UTC}
-    command: tunnel --no-autoupdate run --token ${CLOUDFLARE_TUNNEL_TOKEN}
+      - TUNNEL_TOKEN_FILE=/run/secrets/cloudflare_token
+    secrets:
+      - cloudflare_token
+    command: tunnel --no-autoupdate run
     networks:
       - media-network      # Keep for backward compatibility (Iteration 1)
       - dmz-net           # DMZ network with Traefik
