--- a/web-ui/docker-compose.yml
+++ b/web-ui/docker-compose.yml
@@ -3,16 +3,19 @@ services:
     build: .
     container_name: media-web-ui
     restart: unless-stopped
+    user: "1000:1000"
     # Removed: ports - Access via Traefik at https://${TAILSCALE_HOST}:3001
     networks:
       - media-network      # Keep for backward compatibility (Iteration 1)
       - frontend-net      # User-facing dashboard
+    secrets:
+      - admin_password
     environment:
       - TZ=${TZ:-UTC}
       - PUBLIC_DASHBOARD_DOMAIN=${PUBLIC_DASHBOARD_DOMAIN:-otterammo.xyz}
       - TAILSCALE_HOST=${TAILSCALE_HOST}
       - SERVER_IP=${SERVER_IP:-192.168.86.111}
-      - ADMIN_PASSWORD=${ADMIN_PASSWORD:-admin}
+      - ADMIN_PASSWORD_FILE=/run/secrets/admin_password
     labels:
       - "traefik.enable=true"
       - "traefik.docker.network=media-network"
