--- a/authelia/docker-compose.yml
+++ b/authelia/docker-compose.yml
@@ -21,27 +21,31 @@ services:
       - security-net
       - frontend-net
 
-    labels:
-      - "traefik.enable=true"
-      - "traefik.docker.network=frontend-net"
-
-      # Auth portal router
-      - "traefik.http.routers.authelia.rule=Host(`${TAILSCALE_HOST}`)"
-      - "traefik.http.routers.authelia.entrypoints=authelia"
-      - "traefik.http.routers.authelia.tls=true"
-      - "traefik.http.services.authelia.loadbalancer.server.port=9091"
-
-      # Forward auth middleware for other services to use
-      - "traefik.http.middlewares.authelia.forwardAuth.address=http://authelia:9091/api/authz/forward-auth"
-      - "traefik.http.middlewares.authelia.forwardAuth.trustForwardHeader=true"
-      - "traefik.http.middlewares.authelia.forwardAuth.authResponseHeaders=Remote-User,Remote-Groups,Remote-Name,Remote-Email"
-
+    deploy:
+      resources:
+        limits:
+          memory: 256M
+        reservations:
+          memory: 64M
     healthcheck:
       test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:9091/api/health"]
       interval: 30s
       timeout: 10s
       retries: 3
       start_period: 30s
+    labels:
+      - "autoheal=true"
+      - "traefik.enable=true"
+      - "traefik.docker.network=frontend-net"
+      # Auth portal router
+      - "traefik.http.routers.authelia.rule=Host(`${TAILSCALE_HOST}`)"
+      - "traefik.http.routers.authelia.entrypoints=authelia"
+      - "traefik.http.routers.authelia.tls=true"
+      - "traefik.http.services.authelia.loadbalancer.server.port=9091"
+      # Forward auth middleware for other services to use
+      - "traefik.http.middlewares.authelia.forwardAuth.address=http://authelia:9091/api/authz/forward-auth"
+      - "traefik.http.middlewares.authelia.forwardAuth.trustForwardHeader=true"
+      - "traefik.http.middlewares.authelia.forwardAuth.authResponseHeaders=Remote-User,Remote-Groups,Remote-Name,Remote-Email"
 
   authelia-redis:
     image: redis:alpine
@@ -56,8 +60,16 @@ services:
 
     command: redis-server --save 60 1 --loglevel warning
 
+    deploy:
+      resources:
+        limits:
+          memory: 256M
+        reservations:
+          memory: 64M
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
       interval: 30s
       timeout: 10s
       retries: 3
+    labels:
+      - "autoheal=true"
