--- a/cloudflared/docker-compose.yml
+++ b/cloudflared/docker-compose.yml
@@ -17,5 +17,18 @@ services:
       - dmz-net           # DMZ network with Traefik
     depends_on:
       - traefik
+    deploy:
+      resources:
+        limits:
+          memory: 256M
+        reservations:
+          memory: 64M
+    healthcheck:
+      test: ["CMD", "cloudflared", "tunnel", "info"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 30s
     labels:
+      - "autoheal=true"
       - "traefik.enable=false"  # Cloudflared doesn't need to be exposed through Traefik
