--- a/jellyseerr/docker-compose.yml
+++ b/jellyseerr/docker-compose.yml
@@ -29,6 +29,7 @@ services:
       retries: 3
       start_period: 40s
     labels:
+      - "autoheal=true"
       - "traefik.enable=true"
       - "traefik.http.routers.jellyseerr-public.rule=Host(`${PUBLIC_JELLYSEERR_DOMAIN:-jellyseerr.otterammo.xyz}`) || Host(`${JELLYSEERR_DOMAIN:-jellyseerr.lan}`)"
       - "traefik.http.routers.jellyseerr-public.entrypoints=web"
