--- a/web-ui/docker-compose.yml
+++ b/web-ui/docker-compose.yml
@@ -16,22 +16,26 @@ services:
       - TAILSCALE_HOST=${TAILSCALE_HOST}
       - SERVER_IP=${SERVER_IP:-192.168.86.111}
       - ADMIN_PASSWORD_FILE=/run/secrets/admin_password
-    labels:
-      - "traefik.enable=true"
-      - "traefik.docker.network=media-network"
-
-      - "traefik.http.routers.web-ui-public.rule=Host(`${PUBLIC_DASHBOARD_DOMAIN:-otterammo.xyz}`)"
-      - "traefik.http.routers.web-ui-public.entrypoints=web"
-      - "traefik.http.routers.web-ui-public.service=web-ui"
-
-      - "traefik.http.routers.web-ui.rule=Host(`${TAILSCALE_HOST}`)"
-      - "traefik.http.routers.web-ui.entrypoints=web-ui"
-      - "traefik.http.routers.web-ui.tls=true"
-      - "traefik.http.routers.web-ui.middlewares=authelia@docker"
-      - "traefik.http.services.web-ui.loadbalancer.server.port=3000"
+    deploy:
+      resources:
+        limits:
+          memory: 256M
+        reservations:
+          memory: 64M
     healthcheck:
       test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://127.0.0.1:3000"]
       interval: 30s
       timeout: 10s
       retries: 3
       start_period: 30s
+    labels:
+      - "traefik.enable=true"
+      - "traefik.docker.network=media-network"
+      - "traefik.http.routers.web-ui-public.rule=Host(`${PUBLIC_DASHBOARD_DOMAIN:-otterammo.xyz}`)"
+      - "traefik.http.routers.web-ui-public.entrypoints=web"
+      - "traefik.http.routers.web-ui-public.service=web-ui"
+      - "traefik.http.routers.web-ui.rule=Host(`${TAILSCALE_HOST}`)"
+      - "traefik.http.routers.web-ui.entrypoints=web-ui"
+      - "traefik.http.routers.web-ui.tls=true"
+      - "traefik.http.routers.web-ui.middlewares=authelia@docker"
+      - "traefik.http.services.web-ui.loadbalancer.server.port=3000"
