--- a/qbittorrent/docker-compose.yml
+++ b/qbittorrent/docker-compose.yml
@@ -49,6 +49,7 @@ services:
       - VPN_SERVICE_PROVIDER=${VPN_PROVIDER:-mullvad}
       - VPN_TYPE=${VPN_TYPE:-wireguard}
       - WIREGUARD_ADDRESSES=${WIREGUARD_ADDRESSES}
+      - WIREGUARD_PRIVATE_KEY_FILE=/run/secrets/wireguard_private_key
     volumes:
       - ./gluetun:/gluetun
     networks:
