refactor(secrets): standardized secret file naming conventions

--- a/.env.example
+++ b/.env.example
@@ -55,14 +55,16 @@ FIREWALL_OUTBOUND_SUBNETS=172.19.0.0/16,192.168.1.0/24
 # =============================================================================
 # Create these files in the secrets/ directory:
 #
-# secrets/cloudflare_token.txt   - Cloudflare Tunnel token
+# secrets/cloudflare_token       - Cloudflare Tunnel token
 #                                  Get from: https://one.dash.cloudflare.com/
 #                                  -> Access -> Tunnels
 #
-# secrets/admin_password.txt     - Web UI admin password
+# secrets/grafana_admin_password - Grafana admin password
+# 
+# secrets/webui_admin_password   - Web UI admin password
 #
 # secrets/wireguard_private_key  - Mullvad WireGuard PrivateKey (single line)
 #
 # Set permissions:
 #   chmod 700 secrets/
-#   chmod 600 secrets/*.txt secrets/wireguard_private_key
+#   chmod 600 secrets/*
