chore(monitoring): added download-net to docker compose networks

--- a/monitoring/docker-compose.yml
+++ b/monitoring/docker-compose.yml
@@ -280,5 +280,6 @@ services:
           memory: 32M
     networks:
       - mgmt-net
+      - download-net
     labels:
       - "traefik.enable=false"
